<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beonesolution.training2018.ItemDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemName"/>

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummyItemName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemGroup"/>

            <TextView
                android:id="@+id/tvItemGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummyItemGroup"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvWarehouse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
